welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:-6: error: Missing closing brace `}' assumed here
try {
^nearHundred:1: error: expected class or object definition
def nearHundred(n:Int): Boolean = {
^