welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  return 90 < nearHundred || nearHundred < 110 || 190 < nearHundred || nearHundred < 210